Opened 5 months ago

Closed 4 months ago

Last modified 4 months ago

#19090 closed bug (fixed)

HaikuDepot crash when logging in first time

Reported by: humdinger Owned by: apl-haiku
Priority: normal Milestone: Unscheduled
Component: Applications/HaikuDepot Version: R1/beta5
Keywords: r1beta5-fixes Cc:
Blocked By: Blocking: #19141
Platform: All

Description

This is R1/beta5, hrev57937+113, 64bit.

After a fresh install of Beta5, I got the attached crash when selecting the "Log in..." menu to log into my existing account. Next time it worked, couldn't reproduce since.

thread 1548: w>HaikuDepot 
state: Exception (General protection fault)

Frame		IP			Function Name
-----------------------------------------------
0x7f6ff7ffeb90	0x22248bdde0e	BReferenceable::AcquireReference() + 0xe 
	Disassembly:
		BReferenceable::AcquireReference():
		0x0000022248bdde00:               55  push %rbp
		0x0000022248bdde01:           4889e5  mov %rsp, %rbp
		0x0000022248bdde04:               53  push %rbx
		0x0000022248bdde05:       bb01000000  mov $0x1, %ebx
		0x0000022248bdde0a:         4883ec08  sub $0x8, %rsp
		0x0000022248bdde0e:       f00fc15f08  lock xaddl %ebx, 0x8(%rdi) <--

	Frame memory:
		[0x7f6ff7ffeb70]  ...s#.......o...   90 e5 0e 73 23 02 00 00 c8 eb ff f7 6f 7f 00 00
		[0x7f6ff7ffeb80]  ....o......s#...   a0 eb ff f7 6f 7f 00 00 08 fd 04 73 23 02 00 00
0x7f6ff7ffebb0	0x2237304fd03	LanguageRepository::LanguageAtIndex(int) const + 0x33 
0x7f6ff7ffec30	0x2237309ddbb	LanguageMenuUtils::AddLanguagesToMenu(LanguageRepository const*, BMenu*) + 0xdb 
0x7f6ff7ffed70	0x22373078422	UserLoginWindow::UserLoginWindow(BWindow*, BRect, Model&) + 0x472 
0x7f6ff7ffedc0	0x223730520c5	MainWindow::_OpenLoginWindow(BMessage const&) + 0x45 
0x7f6ff7ffeed0	0x22373057565	MainWindow::MessageReceived(BMessage*) + 0x4f5 
0x7f6ff7ffef60	0x22248b7d523	BWindow::task_looper() + 0x1d3 
0x7f6ff7ffef80	0x22248abe54b	BLooper::_task0_(void*) + 0x1b 
0x7f6ff7ffefa0	0x1d194b35e37	thread_entry + 0x17 
00000000	0x7f7645ba4258	commpage_thread_exit + 0

Attachments (1)

HaikuDepot-1536-debug-14-09-2024-07-15-16.report (27.0 KB ) - added by humdinger 5 months ago.

Download all attachments as: .zip

Change History (5)

comment:1 by apl-haiku, 5 months ago

Thank you for reporting! See fix [here](https://review.haiku-os.org/c/haiku/+/8328).

comment:2 by waddlesplash, 4 months ago

Resolution: fixed
Status: newclosed

comment:3 by waddlesplash, 4 months ago

Blocking: 19141 added

comment:4 by waddlesplash, 4 months ago

Keywords: r1beta5-fixes added
Note: See TracTickets for help on using tickets.